fix(demo): external-link alignment

--- a/projects/demo/src/app/pages/components/showcases/button/button.component.scss
+++ b/projects/demo/src/app/pages/components/showcases/button/button.component.scss
@@ -3,7 +3,3 @@
     margin-right: 16px;
   }
 }
-
-p span {
-  display: inline-flex;
-}
